--- a/paper/perfomances_table.tex
+++ b/paper/perfomances_table.tex
@@ -1,21 +1,21 @@
-\begin{tabular}{lllllllllllll}
+\begin{tabular}{lllllllll}
 \toprule
-{} &                     Name & \$\textbackslash bar\{r\}\$ &                   Name & \$\textbackslash bar\{r\}\$ &                        Name & \$\textbackslash bar\{r\}\$ &               Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ &                 Name & \$\textbackslash bar\{r\}\$ \\
+{} &                     Name & \$\textbackslash bar\{r\}\$ &                        Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ \\
 \midrule
-0  &            Evolved HMM 5 &     0.007 &                 Grumpy &      0.14 &                         DBS &         0 &          Fortress4 &     0.013 &             Evolved FSM 16 &         0 &           Alternator &     0.304 \\
-1  &           Evolved FSM 16 &      0.01 &                    \$e\$ &      0.19 &     Evolved FSM 16 Noise 05 &     0.008 &           Defector &     0.014 &    Evolved FSM 16 Noise 05 &     0.013 &               \$\textbackslash phi\$ &      0.31 \\
-2  &     EvolvedLookerUp2\_2\_2 &     0.011 &         Tit For 2 Tats &     0.206 &      Evolved ANN 5 Noise 05 &     0.013 &  Better and Better &     0.016 &                       MEM2 &     0.027 &                  \$e\$ &     0.312 \\
-3  &  Evolved FSM 16 Noise 05 &     0.017 &  Slow Tit For Two Tats &      0.21 &                 BackStabber &     0.024 &    Tricky Defector &     0.019 &              Evolved HMM 5 &     0.043 &                \$\textbackslash pi\$ &     0.317 \\
-4  &        PSO Gambler 2\_2\_2 &     0.022 &           Cycle Hunter &     0.215 &               DoubleCrosser &     0.025 &          Fortress3 &     0.022 &       EvolvedLookerUp2\_2\_2 &     0.049 &    Limited Retaliate &     0.353 \\
-5  &              Evolved ANN &     0.029 &         Risky QLearner &     0.222 &               Evolved ANN 5 &     0.028 &     Gradual Killer &     0.025 &       Spiteful Tit For Tat &     0.059 &     Anti Tit For Tat &     0.354 \\
-6  &            Evolved ANN 5 &     0.034 &          Cycler CCCCCD &     0.229 &                 Evolved ANN &     0.038 &         Aggravater &     0.028 &           Nice Meta Winner &     0.069 &  Limited Retaliate 3 &     0.356 \\
-7  &        PSO Gambler 1\_1\_1 &     0.037 &            Retaliate 3 &      0.23 &        Spiteful Tit For Tat &     0.051 &             Raider &     0.031 &         NMWE Finite Memory &     0.069 &          Retaliate 3 &     0.356 \\
-8  &            Evolved FSM 4 &     0.049 &            Retaliate 2 &     0.239 &               Evolved HMM 5 &     0.051 &         Cycler DDC &     0.045 &         NMWE Deterministic &      0.07 &            Retaliate &     0.357 \\
-9  &         PSO Gambler Mem1 &      0.05 &        Defector Hunter &      0.24 &              Level Punisher &     0.052 &        Hard Prober &     0.051 &                    Grudger &      0.07 &          Retaliate 2 &     0.358 \\
-10 &                 Winner12 &      0.06 &              Retaliate &     0.242 &                   Omega TFT &     0.059 &         SolutionB1 &      0.06 &           NMWE Long Memory &     0.074 &  Limited Retaliate 2 &     0.361 \\
-11 &             Fool Me Once &     0.061 &    Hard Tit For 2 Tats &      0.25 &                Fool Me Once &     0.059 &      Meta Minority &     0.061 &  Nice Meta Winner Ensemble &     0.076 &             Hopeless &     0.368 \\
-12 &                      DBS &     0.071 &      Arrogant QLearner &      0.25 &  PSO Gambler 2\_2\_2 Noise 05 &     0.067 &              Bully &     0.061 &       EvolvedLookerUp1\_1\_1 &     0.077 &    Arrogant QLearner &     0.406 \\
-13 &            DoubleCrosser &     0.072 &    Limited Retaliate 3 &     0.253 &              Evolved FSM 16 &     0.078 &             EasyGo &     0.071 &            NMWE Memory One &      0.08 &    Cautious QLearner &     0.409 \\
-14 &              BackStabber &     0.075 &               ShortMem &     0.253 &                  EugineNier &      0.08 &    Fool Me Forever &     0.071 &            NMWE Stochastic &     0.085 &      Fool Me Forever &     0.418 \\
+0  &            Evolved HMM 5 &     0.007 &                         DBS &       0.0 &             Evolved FSM 16 &       0.0 &                     Raider &     0.022 \\
+1  &           Evolved FSM 16 &      0.01 &     Evolved FSM 16 Noise 05 &     0.008 &    Evolved FSM 16 Noise 05 &     0.013 &                       MEM2 &     0.037 \\
+2  &     EvolvedLookerUp2\_2\_2 &     0.011 &      Evolved ANN 5 Noise 05 &     0.013 &                       MEM2 &     0.027 &                   Prober 3 &     0.039 \\
+3  &  Evolved FSM 16 Noise 05 &     0.017 &                 BackStabber &     0.024 &              Evolved HMM 5 &     0.043 &    Evolved FSM 16 Noise 05 &     0.048 \\
+4  &        PSO Gambler 2\_2\_2 &     0.022 &               DoubleCrosser &     0.025 &       EvolvedLookerUp2\_2\_2 &     0.049 &                Hard Prober &     0.072 \\
+5  &              Evolved ANN &     0.029 &               Evolved ANN 5 &     0.028 &       Spiteful Tit For Tat &     0.059 &       Spiteful Tit For Tat &     0.078 \\
+6  &            Evolved ANN 5 &     0.034 &                 Evolved ANN &     0.038 &           Nice Meta Winner &     0.069 &          Better and Better &     0.089 \\
+7  &        PSO Gambler 1\_1\_1 &     0.037 &        Spiteful Tit For Tat &     0.051 &         NMWE Finite Memory &     0.069 &                    Grudger &     0.091 \\
+8  &            Evolved FSM 4 &     0.049 &               Evolved HMM 5 &     0.051 &         NMWE Deterministic &      0.07 &                  Fortress4 &     0.096 \\
+9  &         PSO Gambler Mem1 &      0.05 &              Level Punisher &     0.052 &                    Grudger &      0.07 &     Meta Winner Memory One &     0.099 \\
+10 &                 Winner12 &      0.06 &                   Omega TFT &     0.059 &           NMWE Long Memory &     0.074 &           NMWE Long Memory &     0.099 \\
+11 &             Fool Me Once &     0.061 &                Fool Me Once &     0.059 &  Nice Meta Winner Ensemble &     0.076 &           Nice Meta Winner &     0.104 \\
+12 &                      DBS &     0.071 &  PSO Gambler 2\_2\_2 Noise 05 &     0.067 &       EvolvedLookerUp1\_1\_1 &     0.077 &         NMWE Deterministic &     0.109 \\
+13 &            DoubleCrosser &     0.072 &              Evolved FSM 16 &     0.078 &            NMWE Memory One &      0.08 &            NMWE Memory One &     0.112 \\
+14 &              BackStabber &     0.075 &                  EugineNier &      0.08 &            NMWE Stochastic &     0.085 &  Nice Meta Winner Ensemble &     0.115 \\
 \bottomrule
 \end{tabular}
