--- a/nbs/Random Forest with MAPE.ipynb
+++ b/nbs/Random Forest with MAPE.ipynb
@@ -300,13 +300,60 @@
    "source": [
     "score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000000000000"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 ** 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "27"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "axlml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "axlml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -318,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
